ipc/ipdl/test/ipdl/ok/jetpack.ipdl
sync protocol jetpack {
child:
    async __delete__();

};
