ipc/ipdl/test/ipdl/error/opensNonexistent.ipdl
protocol opensNonexistent {
    parent opens Unicorn;

child: __delete__();
state DEAD: send __delete__;
};
